--- a/blueprint/src/web.tex
+++ b/blueprint/src/web.tex
@@ -13,6 +13,7 @@
 
 \input{macros/common}
 \input{macros/web}
+\input{preamble}
 
 \home{https://riccardobrasca.github.io/Numbers}
 \github{https://github.com/riccardobrasca/Numbers}
