--- a/blueprint/src/print.tex
+++ b/blueprint/src/print.tex
@@ -25,7 +25,7 @@
 \input{macros/print}
 \input{preamble}
 
-\title{Numbers}
+\title{A journey to the world of Numbers}
 \author{Riccardo Brasca \and Shanwen Wang}
 
 \begin{document}
