--- a/blueprint/src/web.tex
+++ b/blueprint/src/web.tex
@@ -19,8 +19,8 @@
 \github{https://github.com/riccardobrasca/Numbers}
 \dochome{https://riccardobrasca.github.io/Numbers/docs}
 
-\title{Numbers}
-\author{Riccardo Brasca \and Shanwen Wang}
+\title{A journey to the world of Numbers}
+\author{Riccardo Brasca and Shanwen Wang}
 
 \begin{document}
 \maketitle
