--- a/blueprint/src/content.tex
+++ b/blueprint/src/content.tex
@@ -86,11 +86,11 @@ $(b,a)$:
     \label{MyPreint.neg_quotient}
     \lean{MyPreint.neg_quotient}
     \leanok
-If $x \approx x'$ then $-x \approx -x'$.
+If $x \approx x'$, then $-x \approx -x'$.
 \end{lemma}
 \begin{proof}
     \uses{MyPreint.neg}
-Let $x = (a,b)$ and $x' = (a',b')$, so by assumption $a + b' = b + a'$. Be definition we have
+Let $x = (a,b)$ and $x' = (a',b')$, so by assumption $a + b' = b + a'$. By definition we have
 \[
 -x=-(a,b)=(b,a) \mbox{ and } -x'=-(a',b')=(b',a')
 \]
@@ -108,3 +108,26 @@ and $y = (b, c)$ is
 x + y = (a,b) + (c,d) = (a+c, b + d)
 \]
 \end{definition}
+
+\begin{lemma}
+    \label{MyPreint.add_quotient}
+    \lean{MyPreint.add_quotient}
+    \leanok
+If $x \approx x'$ and $y \approx y'$, then $x + y \approx x' + y'$.
+\end{lemma}
+\begin{proof}
+    \uses{MyPreint.add}
+Let $x = (a,b)$, $y = (c,d)$, $x' = (a',b')$ and $y' = (c',d')$ such that $x \approx x'$ and $y \approx y'$. by assumption we have
+\[
+a + b' = b + a' \mbox{ and } c + d' = d + c'
+\]
+Adding these two equalities we get
+\[
+a+b'+c+d'=b+a'+d+c'
+\]
+and hence
+\[
+a+c+b'+d'=b+d+a'+c'
+\]
+that is $x + y = (a+c,b+d) \approx (a'+c',b'+d') = x'+y'$.
+\end{proof}
