--- a/blueprint/src/preamble.tex
+++ b/blueprint/src/preamble.tex
@@ -6,3 +6,6 @@
 \newcommand{\R}{\mathbb{R}}
 \newcommand{\MyPreint}{\mathrm{MyPreint}}
 \newcommand{\MyInt}{\mathrm{MyInt}}
+\newcommand{\MyPrerat}{\mathrm{MyPrerat}}
+\newcommand{\MyRat}{\mathrm{MyRat}}
+\newcommand{\Lean}{\texttt{lean}}
