--- a/blueprint/src/content.tex
+++ b/blueprint/src/content.tex
@@ -358,7 +358,7 @@ Let $x$ and $y$ in $\MyInt$ such that $x \neq 0$ and $y \neq 0$. Then $x*y \neq 
 We have that $i(0) = 0$.
 \end{lemma}
 \begin{proof}
-    \uses{MyInt, MyInt.i_zero}
+    \uses{MyInt, MyInt.i}
     \leanok
 Clear from the definition.
 \end{proof}
@@ -370,7 +370,7 @@ Clear from the definition.
 We have that $i(1) = 1$.
 \end{lemma}
 \begin{proof}
-    \uses{MyInt, MyInt.i_one}
+    \uses{MyInt, MyInt.i}
     \leanok
 Clear from the definition.
 \end{proof}
