--- a/blueprint/src/content.tex
+++ b/blueprint/src/content.tex
@@ -73,6 +73,7 @@ $R$ is a transitive relation.
 \begin{lemma}
     \label{MyPreint.R_equiv}
     \lean{MyPreint.R_equiv}
+    \leanok
 We have that $R$ is an equivalence relation. From now on, we will write $x \approx y$ for
 $x R y$.
 \end{lemma}
@@ -640,6 +641,7 @@ $R$ is a transitive relation.
 \begin{lemma}
     \label{MyPrerat.R_equiv}
     \lean{MyPrerat.R_equiv}
+    \leanok
 We have that $R$ is an equivalence relation. From now on, we will write $x \approx y$ for
 $x R y$.
 \end{lemma}
