--- a/blueprint/src/content.tex
+++ b/blueprint/src/content.tex
@@ -80,7 +80,7 @@ $x R y$.
 \begin{proof}
     \leanok
     \uses{MyPreint.R_refl, MyPreint.R_symm, MyPreint.R_trans}
-Clear from \ref{MyPreint.R_refl}, \ref{MyPreint.R_symm} and \ref{MyPreint.R_trans}.
+Clear from Lemma~\ref{MyPreint.R_refl}, Lemma~\ref{MyPreint.R_symm} and Lemma~\ref{MyPreint.R_trans}.
 \end{proof}
 
 \begin{definition}
