--- a/blueprint/src/content.tex
+++ b/blueprint/src/content.tex
@@ -588,7 +588,7 @@ It follows that $\leq$ is an order relation.
 
 \chapter{The rationals}
 
-We can now define the rationals, starting with our copy of the integers $MyInt$.
+We can now define the rationals, starting with our copy of the integers $\MyInt$.
 
 We follow a similar path to the one for $\MyInt$.
 
