--- a/blueprint/src/content.tex
+++ b/blueprint/src/content.tex
@@ -845,7 +845,7 @@ Thanks to Lemma~\ref{MyPrerat.inv_quotient} this is well defined.
 
 \begin{proposition}
     \label{MyRat.commRing}
-    \lean{MMyRat.commRing}
+    \lean{MyRat.commRing}
     \leanok
     $\MyRat$ with addition and multiplication is a commutative ring.
 \end{proposition}
