--- a/blueprint/src/content.tex
+++ b/blueprint/src/content.tex
@@ -891,3 +891,15 @@ Let $x \neq 0$ be in $\MyRat$. Then $x * x^{-1} = 1$.
     Let $x = \llbracket (a,b) \rrbracket$, with $b \neq 0$. Since $x \neq 0$ we have $a \neq 0$ and so
     $x^{-1} = \llbracket (b,a) \rrbracket$. The lemma follows by definition of multiplication.
 \end{proof}
+
+\begin{proposition}
+    \label{MyRat.field}
+    \lean{MyRat.field}
+    \leanok
+    $\MyRat$ with addition and multiplication is a field.
+\end{proposition}
+\begin{proof}
+    \uses{MyRat.commRing, MyRat.mul_inv_cancel}
+    \leanok
+    Clear because of \ref{MyRat.mul_inv_cancel}.
+\end{proof}
